# CppDiscord

./: CMakeLists.txt  EmbedHelper.h  Information.h  README.md  ServiceHelper.cpp  ServiceHelper.h  Settings.cpp  Settings.h  discordBot.cpp
headers/: ConfigManager.h  ConfigurationTypes.h  IConfiguration.h  RconConfiguration.h
headers/properties/: Properties.h  PropertiesException.h  PropertyNotFoundException.h
properties/: PropertyNotFoundException.h
src/: ConfigManager.cpp  ServiceHelper.cpp  Settings.cpp  discordBot.cpp
src/configuration/: ConfigManager.cpp  RconConfiguration.cpp
src/service/: ServiceHelper.cpp
src/utils/properties/: Properties.cpp  PropertiesParser.cpp  PropertiesUtils.cpp
utils/properties/: Properties.cpp  PropertiesParser.cpp  PropertiesUtils.cpp
